--- a/ems_ui/templates/index.html
+++ b/ems_ui/templates/index.html
@@ -1,7 +1,18 @@
 {%load static%}
-        <html lang="en">
-            <body>
-                <div id="root"></div>
-            </body>
-            <script src = "{% static '/dist/app.bundle.js' %}"></script>
-        </html>
+<html lang="en">
+    <head>
+        <link
+            rel="stylesheet"
+            href="{% static '/src/assets/css/custom.css' %}"
+        />
+        <link rel="stylesheet" href="{% static '/src/assets/css/enr.css' %}" />
+        <link
+            rel="stylesheet"
+            href="{% static '/src/assets/css/style.css' %}"
+        />
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
+    <script src="{% static '/dist/app.bundle.js' %}"></script>
+</html>
