--- a/ems_ui/templates/index.html
+++ b/ems_ui/templates/index.html
@@ -1,18 +1,43 @@
 {%load static%}
 <html lang="en">
-    <head>
-        <link
-            rel="stylesheet"
-            href="{% static '/src/assets/css/custom.css' %}"
-        />
-        <link rel="stylesheet" href="{% static '/src/assets/css/enr.css' %}" />
-        <link
-            rel="stylesheet"
-            href="{% static '/src/assets/css/style.css' %}"
-        />
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
-    <script src="{% static '/dist/app.bundle.js' %}"></script>
+  <head>
+    <link rel="stylesheet" href="{% static '/src/assets/css/custom.css' %}" />
+    <link rel="stylesheet" href="{% static '/src/assets/css/enr.css' %}" />
+    <link rel="stylesheet" href="{% static '/src/assets/css/style.css' %}" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
+  <!--  -->
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.3.0/css/AdminLTE.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.3.0/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/css/bootstrap-tour.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.13/css/dataTables.bootstrap.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdn.datatables.net/responsive/2.1.0/css/responsive.bootstrap.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.3/jquery-ui.theme.css">
+  <link rel="stylesheet" type="text/css" href="https://acoe.annauniv.edu/sems/assests/css/custom.css">
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <link rel="icon" type="image/ico" href="https://acoe.annauniv.edu/sems/assests/img/anna-univ.ico">
+  <title>EMS's</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+  <script src="{% static '/dist/app.bundle.js' %}"></script>
 </html>
